# workflow-automation

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
migrations/: 20240908203213_AddJobsAndCron.down.sql  20240908203213_AddJobsAndCron.up.sql
src/: cron.rs  db.rs  github.rs  jobs.rs  main.rs  routes.rs
