[package]
name = "workflow-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
cja = { version = "0.0.0", git = "https://github.com/coreyja/coreyja.com", branch = "main" }
sqlx = { version = "0.7.4", features = ["postgres"] }
tracing = "0.1.40"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.82"
futures = "0.3.30"
axum-macros = "0.4.1"
chrono = "0.4.38"
jsonwebtoken = "9"
reqwest = { version = "0.12.7", features = ["json"] }
github-oidc = "0.2.0"
eyre = "0.6.12"
